<resources>
    <string name="app_name">Bastar Arts</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_longout">Log Out</string>

    <string name="menu_home">Profile</string>

    <string name="menu_course">My Category</string>
    <string name="menu_gallery">My Payment</string>
    <string name="menu_slideshow">My Request</string>

    <string name="home_second">Home Second</string>
    <string name="spinner_title">Select Payment Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
